# cortyze_product

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  HANDOFF.md  IMPLEMENTATION_PLAN.md  LOCAL_DEV.md  Makefile  README.md  RUNPOD_SESSION.md  SCALING.md  SUGGESTION_COST_TESTS.md  debug.html  pyproject.toml
api/: auth.py  limiter.py  main.py  predict.py
api/clients/: runpod.py
api/routes/: analyze.py  campaigns.py  compare.py  demos.py  examples.py  health.py  profile.py  regoal.py  runs.py  upload.py
core/: goals_v2.py  regions_v2.py  schemas.py  schemas_v2.py
core/atlas/: mapper.py  regions.py  temporal.py
core/atlas/data/: fsaverage5_dk_labels.json  fsaverage5_dk_labels.npy
core/scoring/: calibration.json  goals.py  normalize.py
data/: cortyze-superbowl-test-ads.csv  cortyze-test-urls-100.csv  demo_comparison.json  demo_suggestions.md
data/demo_runs/: apple_1984.json  coinbase.json  lays.json
data/reference_ads/: README.md  apple_1984_macintosh.json  budweiser_american_icons.json  coinbase_everybody_coinbase_karaoke.json  dunkin_good_will_dunkin.json  lays_last_harvest.json  ring_amazon_search_party_be_a_hero.json  sintel_trailer.json
docker/: build.sh  runpod.Dockerfile
docs/: FIXTURES.md  LOCAL_DEV.md  SERVICES_SETUP.md  runpod_benchmark.md
docs/architecture/: architecture_v2.md  implementation_v2.md
docs/performance/: SCALING.md  runpod_session_1.md  runpod_session_2.md
docs/validation/2026_05_02/: engagement_analysis_1.md  general_engagement_analysis.md
fb_profile/: Local State
fb_profile/Default/: Cookies  DIPS  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  TransportSecurity  Web Data
fb_profile/Default/DawnGraphiteCache/: index
fb_profile/Default/DawnWebGPUCache/: index
fb_profile/Default/Extension Rules/: LOG
fb_profile/Default/Extension Scripts/: LOG
fb_profile/Default/Extension State/: LOG  LOG.old
fb_profile/Default/GCM Store/: LOG  LOG.old
fb_profile/Default/GPUCache/: index
fb_profile/Default/Session Storage/: LOG  LOG.old
fb_profile/Default/Sessions/: Session_13422239082848646  Session_13422239165403957  Tabs_13422239083772989  Tabs_13422239165858241
fb_profile/Default/Site Characteristics Database/: LOG  LOG.old
fb_profile/Default/shared_proto_db/: LOG  LOG.old
fb_profile/GrShaderCache/: index
fb_profile/GraphiteDawnCache/: data_0  data_1  data_2  index
fb_profile/ShaderCache/: index
fb_profile/segmentation_platform/: ukm_db
gpu_worker/: README.md  handler.py  inference.py  post_assembly.py  requirements.txt
results/run_20260430_223011/: results.jsonl
results/run_20260501_062734/: results.csv  results.jsonl
results/run_20260501_062734/predictions/: 29a889bd-ce7d-4ad2-abef-5e405a69f5ac.npy  f99bbc43-e7a3-49ae-bdcb-9b0941249448.npy
scripts/: analyze_instagram_reels.py  benchmark_runpod.py  build_atlas_labels.py  build_demo_timeseries.py  build_fixture.py  build_post_fixture.py  bulk_register_from_run.py  calibrate_from_fixture.py  check_secrets.py  dev_minio.sh  presign_r2.py  register_reference_ad.py  run_reels_inference.py  upload_to_r2.py
scripts/fixtures/: build_fixture.py  build_post_fixture.py  calibrate_from_fixture.py  plot_fixture.py
scripts/validation/: analyze_csv.py  analyze_instagram_reels.py  analyze_results.py  analyze_tik_tok.py  analyze_visualizer.py  import_session.py  reels_to_csv.py  run_csv_inference.py  run_reels_inference.py  run_tik_tok_inference.py  scrape_metrics.py  validate_against_engagement.py
services/demo/: __init__.py
services/examples/: library.py
services/orchestrator/: __init__.py  events.py  runner.py
services/persistence/: campaigns.py  profiles.py  reports.py  runs_v2.py
services/persistence/migrations/: 001_reports.sql  002_campaigns_and_context.sql  002_runs_v2.sql  (+10 more)
services/social_context/: __init__.py  client.py  entities.py  graph.py  health.py  query.py  ratelimit.py  scheduler.py  schemas.py  scraper.py  sentiment.py
services/storage/: r2.py
services/suggestions/: __init__.py  moments.py  prompts.py  rules.py  schemas.py
services/synthesis/: __init__.py  claude.py  mock.py  peaks.py  protocol.py
services/trends/: __init__.py  mock.py  protocol.py
services/validation/: __init__.py  mock.py  protocol.py
services/visualization/: brain_plot.py
tests/: conftest.py  test_api.py  test_atlas.py  test_demo_runs.py  test_e2e_golden.py  test_goals.py  test_goals_v2.py  test_library.py  test_moments.py  test_peaks.py  test_runs_v2.py  test_scoring.py  test_social_context_client.py  test_social_context_entities.py  test_social_context_graph.py  test_social_context_neo4j.py  test_social_context_observability.py  test_social_context_query.py  test_social_context_scheduler.py  test_social_context_sentiment.py  test_suggestions.py  test_temporal.py  test_trend_context_v2.py
tests/fixtures/: README.md  golden_pred_post_T6.meta.json  golden_pred_post_T6.npy  golden_pred_sintel_T53.meta.json  golden_pred_video_f7050d4a_T31.meta.json  golden_pred_video_f7050d4a_T31.npy  golden_report_sintel.json
(+38 files in other folders)
