[project]
name = "cortyze"
version = "0.0.1"
description = "BrainScore — neural content prediction engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "numpy>=2.0",
    "nilearn>=0.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "boto3>=1.35",
    "psycopg[binary]>=3.2",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Stage 2 suggestion engine — install when you flip SUGGESTION_LLM_MODE
# off mock. `uv sync --extra suggestions` gets you both SDKs.
suggestions = [
    "openai>=1.0",       # works with OpenAI, vLLM, Ollama, Groq, Together, Anthropic-compat
    "anthropic>=0.30",   # native Claude SDK with prompt-caching
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
