[project]
name = "cortyze"
version = "0.0.1"
description = "BrainScore — neural content prediction engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "numpy>=2.0",
    "nilearn>=0.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "boto3>=1.35",
    "psycopg[binary]>=3.2",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "slowapi>=0.1",
]

[project.optional-dependencies]
# Stage 2 suggestion engine — install when you flip SUGGESTION_LLM_MODE
# off mock. `uv sync --extra suggestions` gets you both SDKs.
suggestions = [
    "openai>=1.0",       # works with OpenAI, vLLM, Ollama, Groq, Together, Anthropic-compat
    "anthropic>=0.30",   # native Claude SDK with prompt-caching
]

# Used by scripts/analyze_instagram_reels.py to download reels by URL.
# Install in whichever venv runs the script — for the local Mac CPU TRIBE
# path that's the tribev2 venv (`/Users/kirby/Documents/cortyze/tribev2/.venv`),
# not this project's uv venv.
reels = [
    "yt-dlp>=2025.0.0",
]

# Stage 3 auth — Supabase JWT verification. Supports two modes:
# legacy HS256 (just needs PyJWT) and modern JWT Signing Keys
# (ES256/RS256, requires `cryptography` for asymmetric verification).
# Pulled in only when the API is run against a real Supabase project.
# AUTH_DISABLED=true bypasses the dependency entirely for local dev.
auth = [
    "PyJWT[crypto]>=2.8",   # crypto extra → cryptography for ES256/RS256/EdDSA
]

# Phase 2 GraphRAG / social-context pipeline. Activated by setting
# TRENDS_MODE=graphrag. Each subgroup is independently optional so the
# core API stays light when GraphRAG isn't deployed.
#   * Graph + NLP fundamentals (PR #2)        — networkx, spaCy, VADER
#   * Scrapers (PR #4 / PR #6)                — praw, pytrends, requests
#   * Scheduler + retries (PR #4)             — apscheduler, tenacity
#   * Neo4j backend (PR #5, prod-only)        — neo4j driver
# spaCy needs `en_core_web_sm` at runtime — install via
# `uv run python -m spacy download en_core_web_sm` after the extras
# install. Dockerfile bakes this into a build layer for prod.
social-context = [
    "networkx>=3.2",
    "spacy>=3.7",
    "vaderSentiment>=3.3",
    "praw>=7.7",
    "pytrends>=4.9",
    "apscheduler>=3.10",
    "tenacity>=8.2",
]
social-context-neo4j = [
    "neo4j>=5.20",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
